RESOLVED FIXED300310
SpeculationRules: Speculation-Tags tests are all failing
https://bugs.webkit.org/show_bug.cgi?id=300310
Summary SpeculationRules: Speculation-Tags tests are all failing
Yoav Weiss
Reported 2025-10-07 03:45:05 PDT
The Speculation-Tag tests are failing. We should fix most of them. (some cross-origin/prerender ones are supposed to fail, as we don't support them)
Attachments
Yoav Weiss
Comment 1 2025-10-07 03:51:17 PDT
EWS
Comment 2 2025-10-07 09:34:39 PDT
Committed 301143@main (72a5bca1bfec): <https://commits.webkit.org/301143@main> Reviewed commits have been landed. Closing PR #51933 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-10-07 09:35:11 PDT
Note You need to log in before you can comment on or make changes to this bug.