SpeculationRules: Fix up the Sec-Speculation-Tags implementation. https://bugs.webkit.org/show_bug.cgi?id=300310

Reviewed by Alex Christensen.

This PR fixes up the Speculation-Tags implementation to properly JSON quote the tag values,
and add a null value when there aren't any tags. This fixes the failing tests.

* LayoutTests/imported/w3c/web-platform-tests/speculation-rules/speculation-tags/cross-site-prefetch.https-expected.txt: Failing differently.
* LayoutTests/imported/w3c/web-platform-tests/speculation-rules/speculation-tags/cross-site-to-same-site-redirection-prefetch.https-expected.txt: Progression.
* LayoutTests/imported/w3c/web-platform-tests/speculation-rules/speculation-tags/deduped-and-sorted-tags.https_type=prefetch-expected.txt: Still failing as behavior is not implemented.
* LayoutTests/imported/w3c/web-platform-tests/speculation-rules/speculation-tags/invalid-tags.https_tag-level=rule&type=prefetch-expected.txt: Progression.
* LayoutTests/imported/w3c/web-platform-tests/speculation-rules/speculation-tags/invalid-tags.https_tag-level=ruleset&type=prefetch-expected.txt: Progression.
* LayoutTests/imported/w3c/web-platform-tests/speculation-rules/speculation-tags/no-tags.https-expected.txt: Progression.
* LayoutTests/imported/w3c/web-platform-tests/speculation-rules/speculation-tags/prefetch-eagerness-pointer-down.https-expected.txt: No support for "moderate".
* LayoutTests/imported/w3c/web-platform-tests/speculation-rules/speculation-tags/prefetch-eagerness-pointer-hover.https-expected.txt: No support for "moderate".
* LayoutTests/imported/w3c/web-platform-tests/speculation-rules/speculation-tags/same-site-to-cross-site-redirection-prefetch.https-expected.txt: Failing differently.
* LayoutTests/imported/w3c/web-platform-tests/speculation-rules/speculation-tags/valid-tags.https_tag-level=rule&type=prefetch-expected.txt: Progression.
* LayoutTests/imported/w3c/web-platform-tests/speculation-rules/speculation-tags/valid-tags.https_tag-level=ruleset&type=prefetch-expected.txt: Progression.
* Source/WebCore/loader/DocumentPrefetcher.cpp:
(WebCore::makePrefetchRequest): Add spec link.
* Source/WebCore/loader/SpeculationRules.cpp:
(WebCore::parseSingleRule): Quote values and add null string.
(WebCore::SpeculationRules::parseSpeculationRules): Quote values.

Canonical link: https://commits.webkit.org/301143@main